--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csv-parse": "^5.4.0",
     "express": "^4.18.2",
+    "fast-csv": "^4.3.6",
     "helmet": "^7.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.11.1",
