--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "csv-parse": "^5.4.0",
     "express": "^4.18.2",
     "fast-csv": "^4.3.6",
+    "google-search-results-nodejs": "^2.1.0",
     "helmet": "^7.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.11.1",
